# slono-vcv-plugin

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  plugin.json
makefiles/: cmake-targets.mk
plugin/: CMakeLists.txt  MyModule.h  plugin.cpp  plugin.hpp
